--- a/style.css
+++ b/style.css
@@ -4,13 +4,42 @@
 }
 
 body {
-  display: grid;
-  place-items: center;
-  min-height: 100vh;
+  width: 100%;
   background-color: gray;
+  font-family: 'Helvetica';
 }
 
 canvas {
   border: 1px solid rgb(88, 88, 88);
   background-color: rgb(106, 106, 245);
+  margin: 20px auto;
+  display: block;
 }
+
+.options {
+  margin: 20px;
+  user-select: none;
+}
+
+.options h3 {
+  margin: 10px;
+}
+
+.options h4 {
+  margin: 4px 20px;
+}
+
+.options .row {
+  display: flex;
+  margin: 5px 30px;
+}
+
+.row label {
+  margin: 5px 10px;
+}
+
+button {
+  padding: 5px 20px;
+  margin: 5px 10px;
+}
+
